<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextWebsite"
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:hint="@string/enter_website_url_"
        android:imeOptions="actionDone"
        android:inputType="textUri" />

    <Button
        android:id="@+id/buttonGenerate"
        android:layout_width="wrap_content"
        android:layout_height="87dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/generate_password" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:text="@string/generated_password"
        android:textSize="18sp" />
    <Button
        android:id="@+id/buttonCopy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copy_password"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal" />


    <Button
        android:id="@+id/buttonExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/exit" />



</LinearLayout>
